# conceptual-architecture-for-firebird-paper

./: .gitignore  .gitmodules  Conceptual Architecture for Firebird.html  Conceptual Architecture for Firebird_Romanian.html  READING-GUIDE.md  README.md  aggregate-and-window-functions.md  architecture-comparison.md  arhitectura_conceptuala_firebird.odp  backup-and-recovery.md  blob-handling.md  blr-intermediate-language.md  careful-writes-and-crash-safety.md  catalog-bootstrap.md  client-apis-and-drivers.md  connection-pooling.md  debugging-firebird.md  deployment-and-operations.md  embedded-architecture-comparison.md  extensibility.md  firebird-events.md  firebird-rust-conversion.md  firebird-wire-protocol.md  garbage-collection-and-sweep.md  grammar-and-parser.md  high-availability.md  index.html  indexing-and-full-text-search.md  internationalization.md  lock-manager.md  memory-management.md  metadata-cache.md  migration-and-interoperability.md  monitoring-and-tuning.md  numeric-and-precision-arithmetic.md  on-disk-structure.md  page-cache-coherency.md  parallel-workers.md  params.json  profiler.md  (+14 more)
diagrams/: firebird-grammar-full.mmd  firebird-grammar-top.mmd
samples/: CMakeLists.txt  README.md  client_test.cpp  events_demo.cpp  protocol_client.cpp
samples/cpp/: api_styles.cpp  architecture_comparison.cpp  backup.cpp  blobs.cpp  blr.cpp  careful_writes.cpp  catalog.cpp  deployment.cpp  embedded_demo.cpp  extensibility.cpp  fb_sample.h  gc_sweep.cpp  ha.cpp  indexes.cpp  (+28 more)
samples/rust/: Cargo.toml
samples/rust/src/: lib.rs
tools/: grammar_to_mermaid.py
(+136 files in other folders)
